210418_터치이벤트처리
스마트폰에 화면터치 반응처리기능 구현완료
터치 시작시 영역로그표시 완료
각터치 좌표 출력 로그표시 완료

--- a/C07/126/126.html
+++ b/C07/126/126.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>샘플</title>
   <link rel="stylesheet" href="../common/css/style.css"/>
   <link rel="stylesheet" href="style.css"/>
-  <script src="124.js" defer></script>
+  <script src="126.js" defer></script>
+  
 </head>
 <body>
-<main class="main">
-  <div class="character"></div>
-  <p class="paragraph">Hello, this is a Javascript programming book. </p>
-  <div id="balloon"></div>
+<main class="main centering">
+  <div class="box">
+    <p>changedTouches</p>
+    <p class="log"></p>
+  </div>
 </main>
 </body>
 </html>
