210418_127번문제코딩업데이트/방향키 코드값활용
128번은 방향키 또는 키보드 객체 활용해 입력된 키값 확인기능 구현

--- a/C07/127/keyevent/index.html
+++ b/C07/127/keyevent/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>샘플</title>
-  <link rel="stylesheet" href="../../../common/css/style.css"/>
+  <link rel="stylesheet" href="../../common/css/style.css"/>
   <link rel="stylesheet" href="style.css"/>
   <script src="main.js" defer></script>
   
@@ -12,7 +12,7 @@
 <body>
 <main class="main centering">
   <div class="box">
-    <p>changedTouches</p>
+    <textarea class="textarea"></textarea>
     <p class="log"></p>
   </div>
 </main>
